<resources>
    <string name="app_name">FinancialApp</string>
    <string name="nav_home">Home</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_profile">Profile</string>
    <string name="type">Tipe</string>
    <string name="total">Jumlah</string>
    <string name="category">Kategori</string>
    <string name="date">Tanggal</string>
    <string name="note">Catatan</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <string name="home_recordFinance">Record your finanace</string>
    <string name="home_easyWay">in easy way</string>
    <string name="home_getStarted">Get Started -></string>

    <string-array name="Type">
        <item>Pengeluaran</item>
        <item>Pemasukan</item>
    </string-array>

    <string-array name="Category_Pengeluaran">
        <item>Tagihan</item>
        <item>Hobi</item>
        <item>Belanja</item>
    </string-array>

    <string-array name="Category_Pemasukan">
        <item>Hadiah</item>
        <item>Gaji</item>
    </string-array>
</resources>