<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/home_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_text_recordFinance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_recordFinance"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_easyWay"
                android:textSize="40sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/home_btn_getstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="70dp"
            android:background="@android:color/transparent"
            android:text="@string/home_getStarted"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/home_btn_getstarted" />

    </RelativeLayout>

    <ImageView
        android:layout_width="351dp"
        android:layout_height="383dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/people_gadget"/>

</RelativeLayout>