<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marek_piwnicki_unsplash">

    <RelativeLayout
        android:id="@+id/profile_bottom_bg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/profile_bottom_bg"
        android:backgroundTint="@color/white_transparent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/name"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/email"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/facebook"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/twitter"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/profile_edit_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890~!@#$%^*()-=_+:\?,./{}[]&amp;&lt;&gt;"
                    android:inputType="textFilter"/>

                <EditText
                    android:id="@+id/profile_edit_email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="https://"
                    android:maxLines="1"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890~!@#$%^*()-=_+:\?,./{}[]&amp;&lt;&gt;"
                    android:inputType="textFilter"/>

                <EditText
                    android:id="@+id/profile_edit_facebook"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="https://"
                    android:maxLines="1"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890~!@#$%^*()-=_+:\?,./{}[]&amp;&lt;&gt;"
                    android:inputType="textFilter"/>

                <EditText
                    android:id="@+id/profile_edit_twitter"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="https://"
                    android:maxLines="1"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890~!@#$%^*()-=_+:\?,./{}[]&amp;&lt;&gt;"
                    android:inputType="textFilter"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/profile_photo_bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:translationY="50dp"
        android:layout_above="@+id/profile_bottom_bg"
        android:background="@drawable/profile_photo_circle">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/user"
            android:layout_gravity="center"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/profile_email_bg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:translationY="50dp"
        android:translationX="-100dp"
        android:layout_above="@+id/profile_photo_bg"
        android:background="@drawable/profile_photo_circle">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_gmail"/>

        <Button
            android:id="@+id/profile_btn_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/profile_fb_bg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:translationY="15dp"
        android:layout_above="@+id/profile_photo_bg"
        android:background="@drawable/profile_photo_circle">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/facebook_f_logo"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/profile_btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/profile_twitter_bg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:translationY="50dp"
        android:translationX="100dp"
        android:layout_above="@+id/profile_photo_bg"
        android:background="@drawable/profile_photo_circle">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/pnglot_com_twitter_bird_logo"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/profile_btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

    </FrameLayout>

</RelativeLayout>